--- a/demo.ipynb
+++ b/demo.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp.ProfileReport(df).to_file(outputfile=\"report.html\")"
+    "pp.ProfileReport(df).to_file(output_file=\"report.html\")"
    ]
   },
   {
@@ -440,9 +440,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
